fix p1 visibility before animation

--- a/css/style.css
+++ b/css/style.css
@@ -335,7 +335,7 @@ header .heading{
     background-color:rgb(137, 123, 150);;
     display: inline;
     transition: none !important;
-    
+    opacity: 0;
 }
 
 .heading p.p2{
